# automake_template

./: Makefile.am  Makefile.in  README.md  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/: Makefile.am  Makefile.in  main.c
src/ModuleA/core/: Makefile.am  Makefile.in  coreA.c  shellA.c
src/ModuleA/include/: coreA.h  shellA.h
src/ModuleB/core/: Makefile.am  Makefile.in  coreB.c
src/ModuleB/include/: coreB.h
